# scaffold-template

./: README.md  cookiecutter.json
tests/presentation/web/: test_app.py
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.override.yml  compose.prod.yml  compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/app/: bootstrap.py  cli.py  web.py
{{ cookiecutter.project_slug }}/app/application/backgroundtasks/handlers/: base.py
{{ cookiecutter.project_slug }}/app/application/interfaces/: __init__.py  pub_sub_service.py  task_manager.py  task_queue.py  uow.py
{{ cookiecutter.project_slug }}/app/domain/: base.py
{{ cookiecutter.project_slug }}/app/infrastructure/: alembic.ini  uow.py
{{ cookiecutter.project_slug }}/app/infrastructure/migrations/: env.py
{{ cookiecutter.project_slug }}/app/infrastructure/services/emailnotificationservice/: __init__.py
{{ cookiecutter.project_slug }}/app/presentation/: cli.py
{{ cookiecutter.project_slug }}/app/presentation/web/: __init__.py
{{ cookiecutter.project_slug }}/app/presentation/web/templates/: layout.html
{{ cookiecutter.project_slug }}/scripts/: docker-stack-wait.sh  entrypoint.sh
{{ cookiecutter.project_slug }}/tests/presentation/web/: test_app.py
