[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scaffold-framework>=0.4.0",
]

[dependency-groups]
dev = [
    "black",
    "djlint",
    "import-linter",
    "mypy",
    "pytest",
    "ruff",
]

[tool.mypy]
disable_error_code = "import-untyped"
enable_error_code = "explicit-override"
disallow_untyped_defs = true
# disallow_any_generics = true
warn_unreachable = true

[tool.black]
line-length = 120
unstable = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "T10",
    "EM",
    "RET",
    "SLF",
    "I",
    "UP",
]
extend-ignore = [
    "A002",
    "ANN101",
    "ANN102",
    "B010",
    "S101",
]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Domain Layer"
type = "forbidden"
source_modules = [
    "app.domain"
]
forbidden_modules = [
    "app.application",
    "app.infrastructure",
    "app.presentation"
]

[[tool.importlinter.contracts]]
name = "Application Layer"
type = "forbidden"
source_modules = [
    "app.application"
]
forbidden_modules = [
    "app.infrastructure",
    "app.presentation"
]

[[tool.importlinter.contracts]]
name = "Infrastructure Layer"
type = "forbidden"
source_modules = [
    "app.infrastructure"
]
forbidden_modules = [
    "app.presentation"
]

[[tool.importlinter.contracts]]
name = "Presentation Layer"
type = "forbidden"
source_modules = [
    "app.presentation"
]
forbidden_modules = [
    "app.domain",
    "app.infrastructure",
]
allow_indirect_imports = true
